[package]
name = "bradcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4"
fake = { version = "2.4", features=['derive', 'uuid', 'chrono']}
rand = "0.8"
clap = { version = "3.1.18", features = ["derive"] }


[dependencies.uuid]
version = "0.8.2"
features = [
    "v4",                # Lets you generate random UUIDs
]
